Fix map z-index

--- a/less/mother/contact.less
+++ b/less/mother/contact.less
@@ -7,11 +7,11 @@
 		position: absolute;
 		display: none;
 		.contents {
-			padding-top: (@line-height-computed * 2);
+			//padding-top: (@line-height-computed * 2);
 			background-color: fade(#000, 50%);
 			cursor: pointer;
 
-			margin-top: -(@line-height-computed * 2);
+			//margin-top: -(@line-height-computed * 2);
 			.transition(all .2s);
 			&:hover,
 			&:focus {
@@ -41,7 +41,10 @@
 			.txt-shadow();
 		}
 	}
-	.map {		
+	.map {	
+		&.iamthemap {
+			z-index: 1;
+		}	
 		position: absolute;
 		height: 100%;
 		width: 100%;
